# cpems

./: .clang-format  .cproject  .gitignore  .project  BUGS.txt  CMakeLists.txt  INSTALL.txt  README.txt  clang-format  cpemsConfig.cmake.in  cpemsConfigVersion.cmake.in  install-requirements-ubuntu.sh  install-requirements-ubuntu20.04.sh  install-requirements-ubuntu22.04.sh  install_manifest.txt
cmake/: FindCGAL.cmake  FindGMP.cmake  FindGSL.cmake
doc/: README-MSCS.txt  TROUBLESHOOTING.txt  mscs-BUGTRAQ.txt  mscs-CHANGELOG.txt  mscs-TODO.txt  notes-MSCS.txt  test-cpemsMCMC-gaussXY-independent.nb
doc/cpeds/: Doxyfile  cpeds-overview.vym  test-bicubic-interpolation.nb
doc/cpeds/overview/: cpeds-overview.html  cpeds-overview.xml
doc/mscs/doc/: .gitignore  Doxyfile  Mscs-structure-by-UML.xmi  derivative-diagram.vym
doc/mscs/doc/Mscs-structure-by-UML/: Mscs-structure-by-UML.docbook  Mscs-structure-by-UML.html
doc/mscs/doc/derivative-diagram/: 2.session  derivative-diagram.prj  diagram.xmi  dupa.xmi
doc/mscs/doc/derivative-diagram/dupa/: dupa.docbook.html
external_packages/: .gitignore
external_packages/ccSHT3/: .cproject  .gitignore  .project  Makefile
external_packages/ccSHT3/include/: ccSHT3.h  fftw_complex_helper.h  generalTools.h  sizedType.h
external_packages/ccSHT3/src/: ccSHT3.cpp  fftw_complex_helper.cpp  generalTools.cpp  makeSizedType.c
external_packages/novas/: .gitignore  Makefile  asc2eph.f  eph_manager.c  eph_manager.h  example.c  novas.c  novas.h
external_packages/novas/de421/: .gitignore
external_packages/novas/de424/: README.txt
external_packages/sla-refr/: .gitignore  Makefile  Makefile~  refro.f
external_packages/velKB/: .gitignore  CMakeLists.txt  Makefile  velKB.f
pyth/: .gitignore  ageh_vs_w.py  average_function.py  draw_maps_pyth-exp.py  draw_maps_pyth-exp2.py  draw_maps_pyth.py  draw_maps_pyth2.py  draw_maps_pyth3.py  draw_maps_pyth4.py  draw_maps_pyth5.py  draw_maps_pyth6.py  draw_maps_pyth8-simple.py  draw_maps_pyth8-test.py  draw_maps_pyth8-test.py~  draw_maps_pyth8.py  draw_maps_pyth8.py~  mat_oper.py  plot_domain_decomposition.py  plot_function.py  plot_function.py~  plot_function.spec  plot_likelihood.py  plot_matrix.py  setup.py
pyth/MoonDuskMovie/: mkMoonDuskMovie.py
pyth/RT32testSuite/: .gitignore  RT32nutation.py  test-C-binding.py  testRT32nutation.py
pyth/TrafficLights/: PlotSolution.py  expected_waiting_time.py
pyth/cosmoPlots/: WlWm_plots.py  WlWm_vs_age.txt.conf  WlWm_vs_dL.txt  WlWm_vs_dL.txt.conf  WlWm_vs_dL.txt.conf~  agez_vs_sigma8  agez_vs_sigma8.py  camb.param  cosmocalc.runlog  todo  todo~  w0h_vs_sigma8-camb-LCDM.template  w0h_vs_sigma8.py  w0h_vs_sigma8_age  w0h_vs_sigma8_params.ini
pyth/interference/: sphericalWaves.py
pyth/pyCPEDScommonFunctions/: .gitignore  OutliersMinVar.py  cal2jd.py  confidenceRange.py  cpedsPythCommon.py  cpedsRotation.cpp  jd2cal.py  join_interpolate.py  testOutliers.py  time_shift.py
src/: Almax--likelihood_data.h  Cthwisdom.cpp  Cthwisdom.h  Efactor.h  LMdataFit.cpp  MClink.cpp  MClink.h  MCparameterSpace.cpp  MCparameterSpace.h  Mscs-MCMC.h  Mscs-Plms-tab.h  Mscs-WMAPsimulation.cpp  Mscs-WMAPsimulation.h  Mscs-WMAPspecifications.cpp  Mscs-WMAPspecifications.h  Mscs-alm.cpp  Mscs-alm.h  Mscs-alms-io_methods.cpp  Mscs-alms.cpp  Mscs-alms.h  Mscs-angular_power_spectrum.cpp  Mscs-angular_power_spectrum.h  Mscs-bispectrum.h  Mscs-colormap.cpp  Mscs-colormap.h  Mscs-common.cpp  Mscs-common.h  Mscs-correlation_function.cpp  Mscs-correlation_function.h  Mscs-dodecahedron.h  Mscs-field.h  Mscs-function-hdf5.cpp  Mscs-function.cpp  Mscs-function.h  Mscs-function2dreg.cpp  Mscs-function2dreg.h  Mscs-function3dreg.cpp  Mscs-function3dreg.h  Mscs-function3dregc-hdf5.cpp  Mscs-function3dregc.cpp  (+191 more)
src/net/: Makefile
src/net/src/C/: task_control_server.c
src/net/task-control-client/: Makefile  main.cpp  progressbar.cpp  progressbar.h  progressbar.ui  task-control-client.pro  taskcontrolclient.cpp  taskcontrolclient.h  taskcontrolclient.ui  ui_progressbar.h  ui_taskcontrolclient.h
tests/: .gitignore  CMakeLists.txt  fit1ofgaussnoise.cpp  gadget-snapshot-dump-data.cpp  lss_convert_IC_grafic2Gadget.cpp  mk_gadget_IC.cpp  ocraBeam.cpp  readGraficIC.cpp  test-SPinterpolation-2d.cpp  test-alms.cpp  test-astroStuff.cpp  test-bicubic-interpolation.cpp  test-cpeds-mcmc-gauss.cpp  test-cpeds-smooth-corrections.matfnin  test-cpeds-smooth.cpp  test-cpedsMCMC-1ofnoiseV2.cpp  test-cpedsMCMC-1ofnoise_spectrum.cpp  test-cpedsMCMC-2Dcontours.cpp  test-cpedsMCMC-2d.cpp  test-cpedsMCMC-gauss3D.cpp  test-cpedsMCMC-gaussXY-independent.cpp  test-cpedsMCMC-parabola_2param.cpp  test-cpedsRNG.cpp  test-domain-decomposition.cpp  test-domain-decomposition2.cpp  test-fft-alias.cpp  test-fits-read.cpp  test-function-derivative.cpp  test-function-fft.cpp  test-function-finter.cpp  test-hdf-openMP.cpp  test-hdf-openMP2.cpp  test-healpix-th_vals.cpp  test-mscsfn-hdf5.cpp  test-mscsfn.cpp  test-parabolaMCMC-2d.cpp  test-plot-map.cpp  test-point2d.cpp  test-pointset3d.cpp  test-time-conversions.cpp  (+4 more)
tests/functional_tests/: CMakeLists.txt  cpems_arithmetic.cpp  func_test_example.cpp  test-cpeds-directions.cpp
tests/unit-tests/: .gitignore  CMakeLists.txt  cpeds_get_healpix_nested_pixels.cpp  test-cpeds-templates.cpp  test-cpeds_refraction_space.cpp  test-smoothing.cpp
